# PySFT

./: .branch-marker  .gitignore  DATABASE_CACHE.md  FEATURES_AND_CAPABILITIES.md  HOLDINGS_ACQUISITION_INSTRUCTIONS.md  README.md  ROADMAP.md  plan-PySFT.prompt.md  pyproject.toml  requirements.lock.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: test,yml  test.yml
prototyping/: check_tase_fetching.py  fetch_page_raw_html.py  get_TASE_security_list.py  test_TASE_Fund_Expo.py
src/: PySFT_Classes.py  PySFT_Constants.py  fetchFinancialData.py
src/pysft/: __init__.py  _meta.py  cli.py  constants.py  enums.py  http_api.py  models.py  utilities.py
src/pysft/core/: __init__.py  constants.py  database.py  enums.py  fetch_task.py  fetcher_manager.py  io.py  models.py  structures.py  tase_specific_utils.py  task_scheduler.py  utilities.py  yf_specific_utils.py
src/pysft/data/: TASE_security_list.py  __init__.py  fetchFinancialData.py  fetcher_manager.py  get_TASE_security_list.py  indicator_international_symbols.json  international_symbols_archive.json  io.py  prepare_international_symbols_strc.ipynb  pysft_cache.db  securitiesinfo.csv  tase_security_list.db
src/pysft/fetchers/: TASE.py  TASE_fast.py  TASE_historical.py  __init__.py  fetch_yfinance.py
src/pysft/lib/: __init__.py  fetchExposure.py  fetchFinancialData.py
src/pysft/src/: fetchFinancialData.py
src/pysft/tools/: logger.py  translator.py
tests/: run_yfinance_mode_fetching.py  testIndicators.py  testPackage.py  test_PR.py  test_caching_pipeline.py  test_database_cache.py  test_scrapy.ipynb  test_tase_mode_runtime.py  test_yfinance_mode_runtime.py
tests/Flutter_App/: README.md  pubspec.yaml
tests/Flutter_App/.dart_tool/: package_config.json  package_graph.json
tests/Flutter_App/.dart_tool/extension_discovery/: devtools.json
tests/baseline_outputs/: fifty_indicators_after_changes.csv  fifty_indicators_after_changes.json  fifty_indicators_before_changes.csv  fifty_indicators_before_changes.summary.txt  fifty_indicators_latest_run.json  info_only_fetching_validation.json
