[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysft"
version = "0.0.3"
description = "Fetch security data and analyze with an LLM agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Lucio" }]
license = { text = "Proprietary" }
dependencies = ["python-dotenv",
                "scrapy",
                "numpy", 
                "pandas", 
                "yfinance",
                "exchange_calendars",
                "googletrans"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pysft*"]

[project.urls]
Homepage = "https://github.com/LuciosProjects/PySFT"