[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysft"
version = "0.0.3"
description = "Fetch security data and analyze with an LLM agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Lucio" }]
license = { text = "Proprietary" }
dependencies = ["psutil>=7.2.1",
                "python-dotenv>=1.2.1",
                "scrapy>=2.14.1",
                "numpy>=2.4.1", 
                "pandas>=2.3.3", 
                "yfinance>=1.0",
                "exchange_calendars>4.12",
                "googletrans>=4.0.2"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pysft*"]

[project.urls]
Homepage = "https://github.com/LuciosProjects/PySFT"